--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
     <maven.plugin.shade.version>3.5.2</maven.plugin.shade.version>
     <maven.plugin.spotless.version>2.24.1</maven.plugin.spotless.version>
     <maven.plugin.surefire.version>3.0.0-M7</maven.plugin.surefire.version>
-    <maven.plugin.silencer.version>1.7.13</maven.plugin.silencer.version>
+    <maven.plugin.silencer.version>1.7.19</maven.plugin.silencer.version>
     <maven.plugin.resources.version>3.3.1</maven.plugin.resources.version>
     <openapi.generator.version>7.8.0</openapi.generator.version>
 
@@ -1527,10 +1527,10 @@
       </modules>
       <properties>
         <lz4-java.version>1.8.0</lz4-java.version>
-        <scala.version>2.13.11</scala.version>
+        <scala.version>2.13.16</scala.version>
         <scala.binary.version>2.13</scala.binary.version>
-        <spark.version>4.0.0-preview2</spark.version>
-        <zstd-jni.version>1.5.6-5</zstd-jni.version>
+        <spark.version>4.0.0</spark.version>
+        <zstd-jni.version>1.5.6-9</zstd-jni.version>
       </properties>
     </profile>
 
