[CELEBORN-2207] Master StatefulSet should add ratis-log4j.properties for ratis shell

--- a/charts/celeborn/templates/configmap.yaml
+++ b/charts/celeborn/templates/configmap.yaml
@@ -48,3 +48,6 @@ data:
 
   metrics.properties: |-
     {{- .Files.Get "files/conf/metrics.properties" | nindent 4 }}
+
+  ratis-log4j.properties: |-
+    {{- .Files.Get "files/conf/ratis-log4j.properties" | nindent 4 }}
