--- a/cpp/celeborn/client/tests/CMakeLists.txt
+++ b/cpp/celeborn/client/tests/CMakeLists.txt
@@ -22,7 +22,8 @@ add_executable(
         Lz4DecompressorTest.cpp
         ZstdDecompressorTest.cpp
         Lz4CompressorTest.cpp
-        ZstdCompressorTest.cpp)
+        ZstdCompressorTest.cpp
+        CompressorFactoryTest.cpp)
 
 add_test(NAME celeborn_client_test COMMAND celeborn_client_test)
 
