--- a/tests/spark-it/pom.xml
+++ b/tests/spark-it/pom.xml
@@ -187,6 +187,11 @@
       <artifactId>minio</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
